objects/BlueSTAR_MEAB139_WSDL_wsAddress__mdt.object
<CustomObject>
    <fields>
        <fullName>EMailAddr__c</fullName>
        <label>EMailAddr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBaeInd__c</fullName>
        <label>WBaeInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBillInd__c</fullName>
        <label>WBillInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIdcardInd__c</fullName>
        <label>WIdcardInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WInvcInd__c</fullName>
        <label>WInvcInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WMailInd__c</fullName>
        <label>WMailInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WPrimChgInd__c</fullName>
        <label>WPrimChgInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WPrimInd__c</fullName>
        <label>WPrimInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WStlmInd__c</fullName>
        <label>WStlmInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSubsidInd__c</fullName>
        <label>WSubsidInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WThrdPrtyInd__c</fullName>
        <label>WThrdPrtyInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acctAddrNm__c</fullName>
        <label>acctAddrNm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acctAddrSeqNbr__c</fullName>
        <label>acctAddrSeqNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acctNbr__c</fullName>
        <label>acctNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cntryCd__c</fullName>
        <label>cntryCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cntryNm__c</fullName>
        <label>cntryNm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cntyCd__c</fullName>
        <label>cntyCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contcFaxNbr__c</fullName>
        <label>contcFaxNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contcNm__c</fullName>
        <label>contcNm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contcPhnNbrExt__c</fullName>
        <label>contcPhnNbrExt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contcPhnNbr__c</fullName>
        <label>contcPhnNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contcTtl__c</fullName>
        <label>contcTtl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>corpEntCd__c</fullName>
        <label>corpEntCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ctyNm__c</fullName>
        <label>ctyNm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>frgnPostlCd__c</fullName>
        <label>frgnPostlCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastChgUsrid__c</fullName>
        <label>lastChgUsrid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prevCntyCd__c</fullName>
        <label>prevCntyCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prevStateCd__c</fullName>
        <label>prevStateCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provinceCd__c</fullName>
        <label>provinceCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stateCd__c</fullName>
        <label>stateCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strLn1__c</fullName>
        <label>strLn1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strLn2__c</fullName>
        <label>strLn2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsChgBaeInd__c</fullName>
        <label>wsChgBaeInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsChgBillInd__c</fullName>
        <label>wsChgBillInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsChgIdcardInd__c</fullName>
        <label>wsChgIdcardInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsChgInvcInd__c</fullName>
        <label>wsChgInvcInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsChgMailInd__c</fullName>
        <label>wsChgMailInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsChgStlmInd__c</fullName>
        <label>wsChgStlmInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsChgSubsidInd__c</fullName>
        <label>wsChgSubsidInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsChgThrdPrtyInd__c</fullName>
        <label>wsChgThrdPrtyInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zipCd__c</fullName>
        <label>zipCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BlueSTAR MEAB139 WSDL wsAddress</label>
    <pluralLabel>BlueSTAR MEAB139 WSDL wsAddress</pluralLabel>
</CustomObject>